@@ -1,7 +1,8 @@
 2002-05-29  Adam Sampson  <azz@gnu.org>
 
-	* onenetd.c: Removed "kill IP options", since it doesn't exist
-	under Solaris.
+	* onenetd.c: Due to missing features on Solaris: removed "kill IP
+	options", replaced setenv with putenv, replaced inet_ntoa with
+	inet_addr.
 
 	* onenetd.c: Added escape characters in response string.
 
